Saved the model knn_23

--- a/pima.ipynb
+++ b/pima.ipynb
@@ -433,8 +433,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "according-original",
+   "cell_type": "markdown",
+   "id": "referenced-yield",
    "metadata": {},
    "source": [
     "Some data visualization"
@@ -1193,36 +1193,517 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eleven-hostel",
+   "id": "knowing-surfing",
    "metadata": {},
    "source": [
-    "<b> This model is far from perfect but it works, let's save it</b>\n",
-    "Not yet saving the model to test a recursive approach."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "nutritional-blast",
-   "metadata": {},
-   "source": [
-    "'''import os\n",
-    "import pickle\n",
-    "#Saving the model\n",
-    "if not os.path.exists('models'):\n",
-    "    os.makedirs('models')\n",
-    "    \n",
-    "MODEL_PATH = \"models/knn_21.sav\"\n",
-    "pickle.dump(knn, open(MODEL_PATH, 'wb'))\n",
-    "'''"
+    "<hr>Now I will try to improve performance by using new value of k in fast knn"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "seeing-price",
+   "id": "spectacular-illinois",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "sunset-multimedia",
+   "metadata": {},
+   "source": [
+    "### Recur 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "grave-centre",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pregnancies</th>\n",
+       "      <th>Glucose</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>SkinThickness</th>\n",
+       "      <th>Insulin</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>DiabetesPedigreeFunction</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.845052</td>\n",
+       "      <td>120.894531</td>\n",
+       "      <td>69.105469</td>\n",
+       "      <td>20.536458</td>\n",
+       "      <td>79.799479</td>\n",
+       "      <td>31.992578</td>\n",
+       "      <td>0.471876</td>\n",
+       "      <td>33.240885</td>\n",
+       "      <td>0.348958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.369578</td>\n",
+       "      <td>31.972618</td>\n",
+       "      <td>19.355807</td>\n",
+       "      <td>15.952218</td>\n",
+       "      <td>115.244002</td>\n",
+       "      <td>7.884160</td>\n",
+       "      <td>0.331329</td>\n",
+       "      <td>11.760232</td>\n",
+       "      <td>0.476951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.078000</td>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>62.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>27.300000</td>\n",
+       "      <td>0.243750</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>117.000000</td>\n",
+       "      <td>72.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>30.500000</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>0.372500</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>140.250000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>127.250000</td>\n",
+       "      <td>36.600000</td>\n",
+       "      <td>0.626250</td>\n",
+       "      <td>41.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>199.000000</td>\n",
+       "      <td>122.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>846.000000</td>\n",
+       "      <td>67.100000</td>\n",
+       "      <td>2.420000</td>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Pregnancies     Glucose  BloodPressure  SkinThickness     Insulin  \\\n",
+       "count   768.000000  768.000000     768.000000     768.000000  768.000000   \n",
+       "mean      3.845052  120.894531      69.105469      20.536458   79.799479   \n",
+       "std       3.369578   31.972618      19.355807      15.952218  115.244002   \n",
+       "min       0.000000    0.000000       0.000000       0.000000    0.000000   \n",
+       "25%       1.000000   99.000000      62.000000       0.000000    0.000000   \n",
+       "50%       3.000000  117.000000      72.000000      23.000000   30.500000   \n",
+       "75%       6.000000  140.250000      80.000000      32.000000  127.250000   \n",
+       "max      17.000000  199.000000     122.000000      99.000000  846.000000   \n",
+       "\n",
+       "              BMI  DiabetesPedigreeFunction         Age     Outcome  \n",
+       "count  768.000000                768.000000  768.000000  768.000000  \n",
+       "mean    31.992578                  0.471876   33.240885    0.348958  \n",
+       "std      7.884160                  0.331329   11.760232    0.476951  \n",
+       "min      0.000000                  0.078000   21.000000    0.000000  \n",
+       "25%     27.300000                  0.243750   24.000000    0.000000  \n",
+       "50%     32.000000                  0.372500   29.000000    0.000000  \n",
+       "75%     36.600000                  0.626250   41.000000    1.000000  \n",
+       "max     67.100000                  2.420000   81.000000    1.000000  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = pd.read_csv(\"diabetes.csv\")\n",
+    "df2.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "parallel-impossible",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pregnancies                 111\n",
+       "Glucose                       5\n",
+       "BloodPressure                35\n",
+       "SkinThickness               227\n",
+       "Insulin                     374\n",
+       "BMI                          11\n",
+       "DiabetesPedigreeFunction      0\n",
+       "Age                           0\n",
+       "Outcome                     500\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#no. of 0's per column\n",
+    "(df2==0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "improving-repository",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pregnancies                 111\n",
+       "Glucose                       0\n",
+       "BloodPressure                 0\n",
+       "SkinThickness                 0\n",
+       "Insulin                       0\n",
+       "BMI                           0\n",
+       "DiabetesPedigreeFunction      0\n",
+       "Age                           0\n",
+       "Outcome                     500\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[['Glucose','BloodPressure','SkinThickness','Insulin','BMI']] = df2[['Glucose','BloodPressure','SkinThickness','Insulin','BMI']].replace(0,np.NaN)\n",
+    "(df2==0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "empty-medicaid",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pregnancies                 0\n",
+       "Glucose                     0\n",
+       "BloodPressure               0\n",
+       "SkinThickness               0\n",
+       "Insulin                     0\n",
+       "BMI                         0\n",
+       "DiabetesPedigreeFunction    0\n",
+       "Age                         0\n",
+       "Outcome                     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imputed_training=fast_knn(df2[['Glucose','BloodPressure','SkinThickness','Insulin','BMI']].values, k=90)\n",
+    "df_t1 = pd.DataFrame(imputed_training,columns=['Glucose','BloodPressure','SkinThickness','Insulin','BMI'])\n",
+    "df2[['Glucose','BloodPressure','SkinThickness','Insulin','BMI']] = df_t1[['Glucose','BloodPressure','SkinThickness','Insulin','BMI']]\n",
+    "df2.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "corresponding-status",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(df2.drop('Outcome', axis = 1))\n",
+    "scaler_features = scaler.transform(df2.drop('Outcome', axis = 1))\n",
+    "df_feat = pd.DataFrame(scaler_features, columns = df2.columns[:-1])\n",
+    "\n",
+    "# appending the outcome feature\n",
+    "df_feat['Outcome'] = df['Outcome'].astype(int)\n",
+    "\n",
+    "df2 = df_feat.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "solid-principal",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = df2.drop('Outcome', axis=1)\n",
+    "y = df2['Outcome']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "southwest-network",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Score ==>  0.776194797338173\n",
+      "Tuned Paramerers ==>  {'n_neighbors': 23}\n",
+      "Accuracy on Train set ==>  0.7881944444444444\n",
+      "Accuracy on Test set ==>  0.765625\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn = KNeighborsClassifier()\n",
+    "param_grid = {'n_neighbors':[i for i in range(3, 91)]}\n",
+    "grid_knn = GridSearchCV(knn,param_grid,scoring='accuracy',cv = 10,refit = True)\n",
+    "\n",
+    "grid_knn.fit(X_train,y_train)\n",
+    "print(\"Best Score ==> \", grid_knn.best_score_)\n",
+    "print(\"Tuned Paramerers ==> \",grid_knn.best_params_)\n",
+    "print(\"Accuracy on Train set ==> \", grid_knn.score(X_train,y_train))\n",
+    "print(\"Accuracy on Test set ==> \", grid_knn.score(X_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "virgin-minister",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.80      0.84      0.82       123\n",
+      "           1       0.69      0.64      0.66        69\n",
+      "\n",
+      "    accuracy                           0.77       192\n",
+      "   macro avg       0.75      0.74      0.74       192\n",
+      "weighted avg       0.76      0.77      0.76       192\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.7375397667020148"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn = KNeighborsClassifier(n_neighbors=23)\n",
+    "knn.fit(X_train,y_train)\n",
+    "y_pred = knn.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test,y_pred))\n",
+    "\n",
+    "roc_auc_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "likely-extraction",
+   "metadata": {},
+   "source": [
+    "##### We will save the mdodel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "unable-sunset",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pickle\n",
+    "\n",
+    "#Saving the model\n",
+    "\n",
+    "if not os.path.exists('models'):\n",
+    "    os.makedirs('models')\n",
+    "    \n",
+    "MODEL_PATH = \"models/knn_21.sav\"\n",
+    "pickle.dump(knn, open(MODEL_PATH, 'wb'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "international-inflation",
+   "metadata": {},
+   "source": [
+    "This is the best model we get"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "addressed-chemical",
+   "metadata": {},
+   "source": [
+    "### Recur 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "official-links",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_csv(\"diabetes.csv\")\n",
+    "\n",
+    "df2[['Glucose','BloodPressure','SkinThickness','Insulin','BMI']] = df2[['Glucose','BloodPressure','SkinThickness','Insulin','BMI']].replace(0,np.NaN)\n",
+    "\n",
+    "imputed_training=fast_knn(df2[['Glucose','BloodPressure','SkinThickness','Insulin','BMI']].values, k=23)\n",
+    "df_t1 = pd.DataFrame(imputed_training,columns=['Glucose','BloodPressure','SkinThickness','Insulin','BMI'])\n",
+    "df2[['Glucose','BloodPressure','SkinThickness','Insulin','BMI']] = df_t1[['Glucose','BloodPressure','SkinThickness','Insulin','BMI']]\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(df2.drop('Outcome', axis = 1))\n",
+    "scaler_features = scaler.transform(df2.drop('Outcome', axis = 1))\n",
+    "df_feat = pd.DataFrame(scaler_features, columns = df2.columns[:-1])\n",
+    "\n",
+    "# appending the outcome feature\n",
+    "df_feat['Outcome'] = df['Outcome'].astype(int)\n",
+    "\n",
+    "df2 = df_feat.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "bibliographic-transport",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df2.drop('Outcome', axis=1)\n",
+    "y = df2['Outcome']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "according-embassy",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Score ==>  0.7777811094452773\n",
+      "Tuned Paramerers ==>  {'n_neighbors': 89}\n",
+      "Accuracy on Train set ==>  0.7743055555555556\n",
+      "Accuracy on Test set ==>  0.7447916666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn = KNeighborsClassifier()\n",
+    "param_grid = {'n_neighbors':[i for i in range(3, 91)]}\n",
+    "grid_knn = GridSearchCV(knn,param_grid,scoring='accuracy',cv = 5,refit = True)\n",
+    "\n",
+    "grid_knn.fit(X_train,y_train)\n",
+    "print(\"Best Score ==> \", grid_knn.best_score_)\n",
+    "print(\"Tuned Paramerers ==> \",grid_knn.best_params_)\n",
+    "print(\"Accuracy on Train set ==> \", grid_knn.score(X_train,y_train))\n",
+    "print(\"Accuracy on Test set ==> \", grid_knn.score(X_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "animated-principle",
+   "metadata": {},
+   "source": [
+    "This is less than the previous recursion."
+   ]
   }
  ],
  "metadata": {
