Created the gui

--- a/pima.ipynb
+++ b/pima.ipynb
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "referenced-yield",
+   "id": "infectious-strike",
    "metadata": {},
    "source": [
     "Some data visualization"
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "knowing-surfing",
+   "id": "original-reservation",
    "metadata": {},
    "source": [
     "<hr>Now I will try to improve performance by using new value of k in fast knn"
@@ -1202,14 +1202,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spectacular-illinois",
+   "id": "cross-suspension",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "sunset-multimedia",
+   "id": "attempted-botswana",
    "metadata": {},
    "source": [
     "### Recur 1"
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "grave-centre",
+   "id": "economic-remove",
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "parallel-impossible",
+   "id": "sacred-muslim",
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1420,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "improving-repository",
+   "id": "extensive-crossing",
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "empty-medicaid",
+   "id": "conceptual-direction",
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1484,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "corresponding-status",
+   "id": "falling-original",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "solid-principal",
+   "id": "greek-steering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1518,7 +1518,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "southwest-network",
+   "id": "mysterious-campbell",
    "metadata": {},
    "outputs": [
     {
@@ -1547,28 +1547,13 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "virgin-minister",
+   "id": "environmental-wellington",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.80      0.84      0.82       123\n",
-      "           1       0.69      0.64      0.66        69\n",
-      "\n",
-      "    accuracy                           0.77       192\n",
-      "   macro avg       0.75      0.74      0.74       192\n",
-      "weighted avg       0.76      0.77      0.76       192\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.7375397667020148"
+       "KNeighborsClassifier(n_neighbors=23)"
       ]
      },
      "execution_count": 32,
@@ -1577,18 +1562,13 @@
     }
    ],
    "source": [
-    "knn = KNeighborsClassifier(n_neighbors=23)\n",
-    "knn.fit(X_train,y_train)\n",
-    "y_pred = knn.predict(X_test)\n",
-    "\n",
-    "print(classification_report(y_test,y_pred))\n",
-    "\n",
-    "roc_auc_score(y_test, y_pred)"
+    "knn_23 = KNeighborsClassifier(n_neighbors=23)\n",
+    "knn_23.fit(X, y)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "likely-extraction",
+   "id": "representative-thirty",
    "metadata": {},
    "source": [
     "##### We will save the mdodel"
@@ -1597,7 +1577,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "unable-sunset",
+   "id": "smooth-cable",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1609,13 +1589,13 @@
     "if not os.path.exists('models'):\n",
     "    os.makedirs('models')\n",
     "    \n",
-    "MODEL_PATH = \"models/knn_21.sav\"\n",
-    "pickle.dump(knn, open(MODEL_PATH, 'wb'))\n"
+    "MODEL_PATH = \"models/knn_23.sav\"\n",
+    "pickle.dump(knn_23, open(MODEL_PATH, 'wb'))\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "international-inflation",
+   "id": "significant-separate",
    "metadata": {},
    "source": [
     "This is the best model we get"
@@ -1623,7 +1603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "addressed-chemical",
+   "id": "brown-smith",
    "metadata": {},
    "source": [
     "### Recur 2"
@@ -1632,7 +1612,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "official-links",
+   "id": "bearing-computer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1658,7 +1638,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "bibliographic-transport",
+   "id": "russian-passing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "according-embassy",
+   "id": "driven-sound",
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "animated-principle",
+   "id": "productive-default",
    "metadata": {},
    "source": [
     "This is less than the previous recursion."
